--- a/server/.env.dist
+++ b/server/.env.dist
@@ -27,3 +27,10 @@ APP_SECRET=9549eb7655d53f1459b41c415a87c068
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+OAUTH2_PRIVATE_KEY_FILE='var/key/private.key'
+OAUTH2_PUBLIC_KEY_FILE='var/key/public.key'
+OAUTH2_ENCRYPTION_KEY='secret'
+OAUTH2_AUTH_CODE_LIFETIME='PT10M'
+OAUTH2_ACCESS_TOKEN_LIFETIME='PT1H'
+OAUTH2_REFRESH_TOKEN_LIFETIME='P1M'
