--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -29,3 +29,48 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    league.oauth2_auth_code_lifetime_interval:
+        class: DateInterval
+        arguments:
+            - '%env(OAUTH2_AUTH_CODE_LIFETIME)%'
+
+    league.oauth2_access_token_lifetime_interval:
+        class: DateInterval
+        arguments:
+            - '%env(OAUTH2_ACCESS_TOKEN_LIFETIME)%'
+
+    league.oauth2_refresh_token_lifetime_interval:
+        class: DateInterval
+        arguments:
+            - '%env(OAUTH2_REFRESH_TOKEN_LIFETIME)%'
+
+    League\OAuth2\Server\Grant\RefreshTokenGrant:
+        arguments:
+            - '@App\Repository\RefreshTokenRepository'
+        calls:
+            - method: 'setRefreshTokenTTL'
+              arguments:
+                  - '@league.oauth2_refresh_token_lifetime_interval'
+
+    League\OAuth2\Server\AuthorizationServer:
+        arguments:
+            - '@App\Repository\ClientRepository'
+            - '@App\Repository\AccessTokenRepository'
+            - '@App\Repository\ScopeRepository'
+            - '%env(OAUTH2_PRIVATE_KEY_FILE)%'
+            - '%env(OAUTH2_ENCRYPTION_KEY)%'
+        calls:
+            - method: 'enableGrantType'
+              arguments:
+                  - 'League\OAuth2\Server\Grant\PasswordGrant'
+                  - '@league.oauth2_access_token_lifetime_interval'
+            - method: 'enableGrantType'
+              arguments:
+                  - '@League\OAuth2\Server\Grant\RefreshTokenGrant'
+                  - '@league.oauth2_access_token_lifetime_interval'
+
+    League\OAuth2\Server\ResourceServer:
+        arguments:
+            - '@App\Repository\AccessTokenRepository'
+            - '%env(OAUTH2_PUBLIC_KEY_FILE)%'
