--- a/server/composer.json
+++ b/server/composer.json
@@ -10,10 +10,13 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "league/oauth2-server": "^8.1",
+        "nyholm/psr7": "^1.3",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/psr-http-message-bridge": "^2.0",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
