--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -10,6 +10,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $encryptionKey: '%env(OAUTH2_ENCRYPTION_KEY)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -29,8 +31,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-
-    Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface: '@sensio_framework_extra.psr7.http_message_factory'
 
     league.oauth2_auth_code_lifetime_interval:
         class: DateInterval
@@ -80,3 +80,5 @@ services:
         arguments:
             - '@App\Repository\AccessTokenRepository'
             - '%kernel.project_dir%/%env(OAUTH2_PUBLIC_KEY_FILE)%'
+
+    Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface: '@sensio_framework_extra.psr7.http_message_factory'
