--- a/server/.env.dist
+++ b/server/.env.dist
@@ -25,7 +25,7 @@ APP_SECRET=9549eb7655d53f1459b41c415a87c068
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://oauth:oauth@mariadb:3306/oauth-sample?serverVersion=mariadb-10.4.13
 ###< doctrine/doctrine-bundle ###
 
 OAUTH2_PRIVATE_KEY_FILE='var/key/private.key'
